# time-tracker

./: app.py  pyproject.toml
time-tracker/: ContentView.swift  FormView.swift  time_trackerApp.swift
time-tracker.xcodeproj/: project.pbxproj
time-trackerTests/: time_trackerTests.swift
time-trackerUITests/: time_trackerUITests.swift  time_trackerUITestsLaunchTests.swift
