[tool.poetry]
name = "time-tracker"
version = "0.1.0"
description = ""
authors = ["lingyi tan <ltan@mathspace.com.au>"]
readme = "README.md"
packages = [{include = "time_tracker"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
plotly = "^5.18.0"
streamlit = "^1.29.0"
cryptography = "^41.0.7"
schedule = "^1.2.1"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
